--- a/src/components/MessagesPanel/MessagesPanel.scss
+++ b/src/components/MessagesPanel/MessagesPanel.scss
@@ -5,11 +5,16 @@
   background-color: $background-primary;
   border: none;
   QScrollBar {
-    height: 16px;
-    width: 16px;
     background-color: $background-secondary;
-    border: 4px solid $background-primary;
     border-radius: 8px;
+    &:horizontal {
+      height: 16px;
+      border: 4px solid $background-primary;
+    }
+    &:vertical {
+      width: 16px;
+      border: 4px solid $background-primary;
+    }
     &::handle {
       background-color: $background-tertiary;
       border-radius: 4px;
